hphp/hack/test/typecheck/subtype_bug_3.php
<?hh
class B {}
class C extends B {}

function foo(ImmSet<arraykey> $x): void {}
function test(ConstSet<string> $x): void { foo($x); }
